JEEx5 homework